--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -8,16 +8,16 @@
 
 </div><br>
 
-<h2>Hero 1</h2>
+
 <% @heroes.each do |hero| %>
   <div class="hero">
-    <p>Name: <%= hero.name %></p><br>
-    <p>Type: <%= hero.power %></p><br>
-    <p>Booty: <%= hero.bio %></p><br>
+    <h2>Hero Name: <%= hero.name %></h2><br>
+    <p>Hero Power: <%= hero.power %></p>
+    <p>Hero Biography: <%= hero.bio %></p><br>
   </div><br>
 <% end %>
 
-<h2>Hero 2</h2>
+<!-- <h2>Hero 2</h2>
 <% @heroes.each do |hero| %>
   <div class="hero">
     <p>Name: <%= hero.name %></p><br>
@@ -33,4 +33,4 @@
     <p>Type: <%= hero.power %></p><br>
     <p>Booty: <%= hero.bio %></p><br>
   </div><br>
-<% end %>
+<% end %> -->
